--- a/src/css/topo.css
+++ b/src/css/topo.css
@@ -316,12 +316,69 @@ h4 {
     display: none;
   }
 
+  .fecharPesquisa {
+    margin-left: 25%;
+    background-color: #33c0a9;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
   .lupass{
     display: block;
     font-size: 1.8rem;
     color: white;
     margin-left: 200%;
     cursor: pointer;
+  }
+
+  .Npesquisas {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .searchModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .searchModalContent {
+    position: relative;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1001;
+  }
+  
+  .searchInput {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  .modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
   }
   
   .icons {
