--- a/src/css/perfil.css
+++ b/src/css/perfil.css
@@ -71,6 +71,43 @@
     text-decoration: underline;
 }
 
+.logado {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin-top: 10%;
+  }
+  
+  .logado img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+  }
+  
+  .logado button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #f00; /* Red button */
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .logado button:hover {
+    background-color: #c00;
+  }
+  
+
 @media screen and (max-width: 1170px) {
 
     .iden{
